# takeoff

./: Makefile  README.md  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
src/takeoff/: blueprint.py  cli.py  pdf.py  utils.py
tests/: test_pdf.py
